--- a/Task_Manager/frontend/src/App.css
+++ b/Task_Manager/frontend/src/App.css
@@ -18,6 +18,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+body{
+  background-color: black;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
